[package]
name = "blsbs"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blst = "0.3.4"
blsttc = "3.3.0"
pairing = "0.20.0"
thiserror = "1.0.26"
serde = "1.0.130"

[dev-dependencies]
rand = "0.7.1"

[patch.crates-io]
#blsttc = {git="https://github.com/iancoleman/blsttc", branch="keyset_derive_child"}
